kubernetes/doc-home-cluster/apps/selfhosted/librechat/mongodb/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: librechat-mongodb
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: librechat-mongodb
  ingress:
    # Librechat
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: librechat
      toPorts:
        - ports:
            - port: "27017"
              protocol: TCP
